[package]
name = "mpvi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.20.0", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
