[package]
name = "mpvi"
version = "0.1.0"
edition = "2021"
description = "interact with mpv over ipc"
license = "AGPL-3.0-only"
repository = "https://github.com/joleeee/mpvi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0", features = ["derive"] }
tokio = { version = "1", features = ["net", "io-util", "sync", "rt", "macros", "time"] }
serial_test = "0"
